# solana-trading-bot

./: .editorconfig  .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
main/: bot.py  log.txt  state.py
main/callback_handlers/: __init__.py  back.py  buy_sell.py  dog_bot.py  limit_order.py  portfolio.py  referral.py  settings.py  sniper.py  support.py  wallet_connection.py  watch_list.py
main/command_handlers/: __init__.py
main/message_handlers/: __init__.py  password.py  snipe.py  swap.py  wallet_connection.py  withdraw_sol.py
main/postgre_sql/: __init__.py
main/utils/: __init__.py
main/web3/: basic.py  dexscreener.py  jupiter.py  swap.py
src/jito_searcher_client/: auth.json  convert.py
src/solbot/: main.py  state.py
src/solbot/callback_handlers/: __init__.py  buy_sell.py  dog_bot.py  portfolio.py  settings.py  sniper.py  support.py  watch_list.py
src/solbot/command_handlers/: __init__.py
src/solbot/database/: __init__.py  create_tables.py
src/solbot/message_handlers/: __init__.py
src/solbot/web3/: basic.py
