[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solbot"
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Bot",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
solbot = "solbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
